<resources>
    <string name="app_name">ActorPayApp</string>
    <string name="facebook_app_id">473779207383239</string>

    <string name="google_map_key">AIzaSyDhMau_8Eah9KaloP_NWaBhDjvryMlzcD0</string>

<!--
    <string name="twitter_api_key">dvCRgAVhLwhTb8vMNjFNP9Npx</string>
    <string name="twitter_api_secret">Wb8sHbiFUGlFBrVptOu3EeapiiK7bVup98G3p4nX0IMHIpwkqu</string>-->


    <string name="twitter_api_key">OWOuTJoG5CeuAx5RETkVxgyT7</string>
    <string name="twitter_api_secret">rjKRSpYlLlxPtzotaE1IE46nIAxJQ9zbNmvVCIB5sCIzal7sbB</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="account_balance">Account Balance</string>
    <string name="wallet_to_wallet">Wallet To Wallet</string>
    <string name="wallet_to_bank">Wallet To Bank</string>
    <string name="enter_mobile_no_or_email">Enter mobile no. or email</string>
    <string name="error_mobile_no_or_email">Invalid mobile no. or email</string>
    <string name="mobile_not_start_with_0">Mobile no. should not start with 0</string>
    <string name="misc">Misc.</string>
    <string name="there_are_many_variations">There are many variations</string>
    <string name="dummy_cancel_amount">₹1500</string>
    <string name="dummy_actual_amount">₹1700</string>
    <string name="dummy_text">An Order ID in this unique number associated with every our secure checkout</string>
    <string name="dummy_text_lorum">Lorem ipsum is a name for a common type of placeholder text. Also known as filler or dummy text.</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="product_list">Product List</string>
    <string name="login">Login</string>
    <string name="my_order">My Order</string>
    <string name="forgot_password_1">Forgot password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">or</string>
    <string name="notification">Notification</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_password">Change Password</string>
    <string name="user_type">User Type</string>
    <string name="redeem">Redeem</string>
    <string name="add_note_description">Add Note Description</string>

    <string name="not_connected_internet">Not connected to Internet</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="wallet_statement">Wallet Statement</string>
    <string name="my_orders">My Orders</string>
    <string name="view_available_money_in_wallet">View Available Money in Wallet</string>
    <string name="promo_offers">Promo &amp; Offers</string>
    <string name="change_payment_option">Change Payment Option</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="rewards">Rewards</string>
    <string name="name">Name</string>
    <string name="splash">Splash</string>
    <string name="enter_currency_type">Enter currency type</string>
    <string name="currency_type">Currency type</string>
    <string name="next">Next</string>
    <string name="choose_country">Choose country</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_email_i_d">Enter Email I\'d</string>
    <string name="select_branch">Select Branch</string>
    <string name="unique_code">Unique Code</string>
    <string name="enter_unique_code">Enter Unique Code</string>
    <string name="enter_account">Enter Account</string>
    <string name="beneficiary_account_no">Beneficiary Account No.</string>
    <string name="pay_now">Pay Now</string>
    <string name="add_new_address">Add New Address</string>
    <string name="submit">Submit</string>
    <string name="remittance">Remittance</string>
    <string name="my_loyalty_and_rewards">My Loyalty/Rewards Points</string>
    <string name="referral">Referral</string>
    <string name="history">History</string>
    <string name="server_not_responding">Server Not Responding!!</string>
    <string name="error_on_fetching_loginDetails">Error on Login Detail Please try again !!</string>
    <string name="please_try_after_sometime">Something went Wrong</string>

    <string name="email_empty">your email is empty</string>
    <string name="invalid_email">your email is invalid</string>
    <string name="invalid_otp">your OTP is invalid</string>
    <string name="oops_your_password_is_empty">your password is empty</string>
    <string name="oops_your_email_is_not_correct_or_empty">your email is not correct or empty</string>
    <string name="oops_your_password_is_not_valid">password should contain min of 8 characters</string>
    <string name="error_password_special">password should contain one symbol</string>
    <string name="error_password_capital">password should contain one uppercase character</string>
    <string name="error_password_small">password should contain one lowercase character</string>
    <string name="error_password_digit">password should contain one digit</string>
    <string name="oops_your_password_is_not_valid2">password should contains one digit,one lowercase,one uppercase and one symbol</string>
    <string name="oops_your_password_is_not_matched">password and confirm password not match</string>
    <string name="error_phone">your phone is not correct</string>
    <string name="error_name">your name\'s length is less than 3</string>
    <string name="error_l_name">your last name\'s length is less than 3</string>
    <string name="return_order">Return Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="terms_of_use_and_privacy_policy">By Signing up you are agreeing to our Terms of Use and Privacy Policy</string>
    <string name="enter_your_current_password">Enter your current Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_your_new_password">Confirm your new password</string>
    <string name="save">save</string>
    <string name="hint_balance">₹ 10,000</string>
    <string name="rs">₹</string>
    <string name="similiar_products">Similar Products</string>
    <string name="my_cart">My Cart</string>
    <string name="sub_total">Sub Total</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="gst">IGST</string>
    <string name="total">Total</string>
    <string name="checkout">CHECKOUT</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="place_order">Place Order</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="remember_me">Remember Me</string>
    <string name="user_name">User Name</string>
    <string name="order_summary">Order Summary</string>
    <string name="thank_you">Thank You</string>
    <string name="order_amount">Order Amount</string>
    <string name="delivery_address_and_time">Delivery Address and Time</string>
    <string name="thank_you_for_your_order">Thank you for your order.</string>
    <string name="back">Back</string>
    <string name="explore_more">Explore More</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter six digit OTP</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="chnage_mobile_number">Change mobile Number</string>
    <string name="add_mobile_number">Add mobile number</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_valid_pan">Please enter valid PAN no</string>
    <string name="enter_valid_adhar">please enter valid Aadhar no</string>
    <string name="plase_select_dob">Please select DOB</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="update">Update</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
        <item>I Prefer not to say</item>
    </string-array>
    <string-array name="status_array">
        <item>Select Status</item>
        <item>SUCCESS</item>
        <item>READY</item>
        <item>CANCELLED</item>
        <item>PARTIALLY CANCELLED</item>
        <item>DISPATCHED</item>
        <item>RETURNING</item>
        <item>PARTIALLY RETURNING</item>
        <item>RETURNED</item>
        <item>PARTIALLY RETURNED</item>
        <item>DELIVERED</item>
        <item>PENDING</item>
        <item>FAILURE</item>
    </string-array>
    <string-array name="dispute_status_array">
        <item>Select Status</item>
        <item>OPEN</item>
        <item>CLOSED</item>
        <item>PENDING</item>
    </string-array>

    <string-array name="wallet_txn_type_status_array">
        <item>All Types</item>
        <item>CREDIT</item>
        <item>DEBIT</item>
    </string-array>

    <string-array name="request_status_array">
        <item>All</item>
        <item>MONEY REQUESTED</item>
        <item>REQUEST ACCEPTED</item>
        <item>REQUEST DECLINED</item>
    </string-array>


    <string name="title_activity_maps">MapsActivity</string>
    <string name="price">Price</string>
    <string name="no_orders_found">No order found</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="edit_image">Edit Image</string>
    <string name="add_money">Add Money</string>
    <string name="amount">Amount</string>
    <string name="add_note">Add Note</string>
    <string name="continues">Continue</string>
    <string name="use_your_pincode_to_authenticate_with_actorpay">Use your password to authenticate with ActorPay.</string>
    <string name="sign_in_with_your_pincode">Sign in with your password?</string>
    <string name="disputes">Disputes</string>
    <string name="raise_dipute">Raise Dipute</string>
    <string name="dispute_raise_successfully">Dispute Raise Successfully</string>
    <string name="no_product_available">No product available</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="no_promo_available_for_you">No promo code available for you</string>
    <string name="you_have_not_done_any_transactions_yet">No transaction found</string>
    <string name="network_error">Network error</string>
    <string name="business_name_">"Business Name: </string>
    <string name="licence_no_">Licence No: </string>
    <string name="email_">Email: </string>
    <string name="contact_no_">Contact No: </string>
    <string name="order_date_">Order Date: </string>
    <string name="price_">Price: </string>
    <string name="password_match">Confirm password should match password</string>
    <string name="no_request_found">No request found</string>
    <string name="error_state">Please enter state</string>
    <string name="error_city">Please enter city</string>
    <string name="error_address_area">Please enter valid address area</string>
    <string name="error_zip">Please enter valid zipcode</string>
    <string name="error_address_line_1">Please enter address line 1</string>
    <string name="error_address_type">Please enter valid address type</string>

</resources>