<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">



    <fragment
        android:id="@+id/homeBottomFragment"
        android:name="com.octal.actorpay.ui.dashboard.bottomnavfragments.HomeBottomFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_bottom">

    </fragment>
    <fragment
        android:id="@+id/profileBottomFragment"
        android:name="com.octal.actorpay.ui.dashboard.bottomnavfragments.ProfileBottomFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile_bottom">

    </fragment>
    <fragment
        android:id="@+id/historyBottomFragment"
        android:name="com.octal.actorpay.ui.dashboard.bottomnavfragments.HistoryBottomFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history_bottom">

    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.octal.actorpay.ui.dashboard.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_walletFragment"
            app:destination="@id/walletFragment" />
        <action
            android:id="@+id/action_homeFragment_to_myOrderFragment"
            app:destination="@id/myOrderFragment" />
        <action
            android:id="@+id/action_homeFragment_to_productListFragment"
            app:destination="@id/productListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_miscFragment"
            app:destination="@id/miscFragment" />
        <action
            android:id="@+id/action_homeFragment_to_transferMoneyFragment"
            app:destination="@id/transferMoneyFragment" />
        <action
            android:id="@+id/action_homeFragment_to_rewardsFragment"
            app:destination="@id/rewardsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_remittance"
            app:destination="@id/remittance" />
        <action
            android:id="@+id/action_homeFragment_to_referFragment"
            app:destination="@id/referFragment" />

    </fragment>

    <fragment
        android:id="@+id/walletFragment"
        android:name="com.octal.actorpay.ui.walletStatement.WalletStatementFragment"
        android:label="@string/wallet_statement"
        tools:layout="@layout/fragment_walletw_statement">


        <action
            android:id="@+id/action_walletFragment_to_homeFragment"
            app:destination="@+id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/transferMoneyFragment"
        android:name="com.octal.actorpay.ui.transferMoney.TransferMoneyFragment"
        android:label="@string/transfer_money"
        tools:layout="@layout/fragment_transfer_money">
        <!-- <action
             app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />-->
    </fragment>

    <fragment
        android:id="@+id/productListFragment"
        android:name="com.octal.actorpay.ui.productList.ProductsListFragment"
        android:label="@string/product_list"
        tools:layout="@layout/fragment_products_list" />

    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.octal.actorpay.ui.notification.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/referFragment"
        android:name="com.octal.actorpay.ui.refer_and_earn.ReferAndEarnFragment"
        android:label="@string/referral"
        tools:layout="@layout/fragment_refer_and_earn" />


    <fragment
        android:id="@+id/myOrderFragment"
        android:name="com.octal.actorpay.ui.myOrderList.MyOrdersListFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_my_order_list" />
    <fragment
        android:id="@+id/rewardsFragment"
        android:name="com.octal.actorpay.ui.rewards_points.RewardsPointsFragment"
        android:label="@string/rewards"
        tools:layout="@layout/fragment_rewards_points" />

    <fragment
        android:id="@+id/miscFragment"
        android:name="com.octal.actorpay.ui.misc.MiscFragment"
        android:label="@string/misc"
        tools:layout="@layout/fragment_misc" />

    <fragment
        android:id="@+id/remittance"
        android:name="com.octal.actorpay.ui.remittance.RemittanceFragment"
        android:label="@string/remittance"
        tools:layout="@layout/fragment_remittance"/>

</navigation>