<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RegularTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/enter_name"
                android:textColor="@color/light_dark_grey"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/RegularTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/round_shadow_box"
                android:drawableEnd="@drawable/drop_down_arrow"
                android:gravity="center_vertical"
                android:hint="@string/enter_name"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:singleLine="true"
                android:textColor="@color/light_dark_grey"
                android:textSize="@dimen/_12sdp" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RegularTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/enter_email"
                android:textColor="@color/light_dark_grey"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/RegularTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/round_shadow_box"
                android:gravity="center_vertical"
                android:hint="@string/enter_email_i_d"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:singleLine="true"
                android:textColor="@color/light_dark_grey"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RegularTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/beneficiary_account_no"
                android:textColor="@color/light_dark_grey"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/RegularTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/round_shadow_box"
                android:gravity="center_vertical"
                android:hint="@string/enter_account"
                android:inputType="numberDecimal"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:singleLine="true"
                android:textColor="@color/light_dark_grey"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RegularTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/unique_code"
                android:textColor="@color/light_dark_grey"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/RegularTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/round_shadow_box"
                android:gravity="center_vertical"
                android:hint="@string/enter_unique_code"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:singleLine="true"
                android:textColor="@color/light_dark_grey"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RegularTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/select_branch"
                android:textColor="@color/light_dark_grey"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/RegularTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/round_shadow_box"
                android:drawableEnd="@drawable/drop_down_arrow"
                android:gravity="center_vertical"
                android:hint="@string/select_branch"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:singleLine="true"
                android:textColor="@color/light_dark_grey"
                android:textSize="@dimen/_12sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPayNow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:backgroundTint="#ED335F"
                android:text="@string/pay_now"
                android:textAllCaps="true"
                android:textSize="@dimen/_12sdp"
                app:cornerRadius="@dimen/_5sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>