<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_10sdp"
    android:paddingHorizontal="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingTop="@dimen/_5sdp"
    android:fontFamily="@font/poppins_bold"
    android:textSize="@dimen/_12ssp"
    android:textColor="@color/text_color"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/sign_in_with_your_pincode"
    />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/text_color"
        android:text="@string/use_your_pincode_to_authenticate_with_actorpay"/>

<com.google.android.material.button.MaterialButton
    android:id="@+id/btn_auth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/subtitle"
    android:layout_marginTop="@dimen/_25sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:text="@string/continues"
    android:backgroundTint="@color/blue_color"
    android:textSize="@dimen/_12ssp"
    android:textColor="@color/white"
    android:fontFamily="@font/poppins_regular"
    />
</androidx.constraintlayout.widget.ConstraintLayout>