<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="productItem"
            type="com.octal.actorpayuser.repositories.retrofitrepository.models.products.ProductItem" />
    </data>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.productList.productdetails.ProductDetailsActivity">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        android:scaleType="fitXY"

        />

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_35sdp"
        android:src="@drawable/back_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/productTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/product_image"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        android:singleLine="true"
        android:text="@{productItem.name}"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_14ssp"
        tools:ignore="RtlSymmetry"
        tools:text="@string/there_are_many_variations" />
    <TextView
        android:id="@+id/productMechant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/productTitle"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/poppins_light"
        android:singleLine="true"
        android:text="@{productItem.merchantName}"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_12ssp"
        tools:ignore="RtlSymmetry"
        tools:text="@string/there_are_many_variations" />

    <TextView
        android:id="@+id/cancelPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/productMechant"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:text='@{"₹"+productItem.actualPrice}'
        android:textColor="#ed3460"
        android:textSize="@dimen/_10ssp"
        tools:text="@string/dummy_cancel_amount" />

    <TextView
        android:id="@+id/actualPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/cancelPriceText"
        app:layout_constraintBottom_toBottomOf="@+id/cancelPriceText"
        app:layout_constraintStart_toEndOf="@+id/cancelPriceText"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        tools:text="@string/dummy_actual_amount"
        android:text='@{"₹"+(productItem.dealPrice+productItem.sgst+productItem.cgst)}'
        android:textColor="@color/blue_color"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/productDisc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/actualPriceText"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        tools:text="@string/dummy_text"
        android:text="@{productItem.description}"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/text_color"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buyNow"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDisc"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:backgroundTint="@color/pink_color"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/buy_now"
        android:textSize="@dimen/_10ssp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addToCart"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="@+id/buyNow"
        app:layout_constraintBottom_toBottomOf="@+id/buyNow"
        app:layout_constraintStart_toEndOf="@+id/buyNow"
        android:layout_marginStart="@dimen/_5sdp"
        android:backgroundTint="@color/blue_color"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/add_to_cart"
        android:textSize="@dimen/_10ssp"
        android:gravity="center"/>


    <TextView
        android:id="@+id/similiar_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buyNow"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        android:singleLine="true"
        android:text="@string/similiar_products"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_13ssp"
        tools:ignore="RtlSymmetry"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_similiar_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/similiar_products"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        tools:listitem="@layout/product_list_item"
        android:nestedScrollingEnabled="false"
        android:visibility="gone"

        />



</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
</layout>